--- a/week4/14.md
+++ b/week4/14.md
@@ -1,9 +1,181 @@
 # Link to Question
 (브루트 포스) 감시: https://www.acmicpc.net/problem/15683
 
+- 소요시간: 1시간 20분...
+
 ## Question Summary
 
 ## My solution summary
+브루트 포스로 풀었다. 막 풀었다. cctv가 없는 경우도 있어서 런타임에러를 찾는다고 삽질을 좀 했다. 
+
+- Recrusive 함수로 cctv가 바라보는 방향에 대한 모든 경우의 수를 우선 구했다. 
+- count_block으로 사각지대를 계산하는데, 이때 각 cctv에 대해서 바라보는 방향에 대해 `mark`라는 함수로 쭉 따라가면서 마크를 했다. 
+- 그리고 0인 갯수를 셋다
 
 ## My code
+```c++
+#include <iostream>
+#include <vector>
+#include <algorithm>
+#include <queue>
 
+using namespace std;
+
+int n, m;
+int answer = 70;
+
+vector<pair<int, int>> cctv;
+vector<pair<int, int>> wall;
+
+int work[8][8];
+
+int dx[4] = { 0, 1, 0, -1};
+int dy[4] = { 1, 0 , -1, 0};
+
+int second[4][2] = {
+        {0, 2},
+        {1, 3},
+        {2, 0},
+        {3, 1}
+};
+int third[4][2] = {
+        {0, 3},
+        {1, 0},
+        {2, 1},
+        {3, 2}
+};
+int fourth[4][3] = {
+        {0, 2, 3},
+        {1, 3, 0},
+        {2, 0, 1},
+        {3, 1, 2}
+};
+
+void mark(int dir, int i, int j, vector<vector<int>>& visited){
+
+    while(true){
+        i += dx[dir];
+        j += dy[dir];
+        if(i < 0 || i >= n || j < 0 || j >= m){
+            break;
+        }
+
+        if(visited[i][j] == 6){
+            break;
+        }
+
+        if(work[i][j] == 0){
+            visited[i][j] = 7;
+        }
+    }
+
+}
+
+int count_block(vector<int> heading){
+    vector<vector<int>> visited(n, vector<int> (m, 0));
+
+    for(int i = 0; i < wall.size(); i++){
+        visited[wall[i].first][wall[i].second] = 6; // 6 이면 벽
+    }
+
+    for(int i = 0; i < cctv.size(); i++){
+        int type = work[cctv[i].first][cctv[i].second];
+        visited[cctv[i].first][cctv[i].second] = type; // 1,2,3,4,5 중에 하나
+
+        // 1 2 3 4 5 는 상관안하고 7을 놔둬 된다.
+
+        // 6이면 못놓고, 그외의 숫자면 무시하고 놔둬 됨
+
+        if(type == 1){
+            mark(heading[i], cctv[i].first, cctv[i].second, visited);
+        }else if(type == 2){
+            mark(second[heading[i]][0], cctv[i].first, cctv[i].second, visited);
+            mark(second[heading[i]][1], cctv[i].first, cctv[i].second, visited);
+        }else if(type == 3){
+            mark(third[heading[i]][0], cctv[i].first, cctv[i].second, visited);
+            mark(third[heading[i]][1], cctv[i].first, cctv[i].second, visited);
+        }else if(type == 4){
+            mark(fourth[heading[i]][0], cctv[i].first, cctv[i].second, visited);
+            mark(fourth[heading[i]][1], cctv[i].first, cctv[i].second, visited);
+            mark(fourth[heading[i]][2], cctv[i].first, cctv[i].second, visited);
+        }else{
+            mark(0, cctv[i].first, cctv[i].second, visited);
+            mark(1, cctv[i].first, cctv[i].second, visited);
+            mark(2, cctv[i].first, cctv[i].second, visited);
+            mark(3, cctv[i].first, cctv[i].second, visited);
+        }
+    }
+
+
+
+    int result = 0;
+    for(int i = 0; i < n; i++){
+        for(int j = 0; j < m; j++){
+            if(visited[i][j] == 0){
+                result++;
+            }
+        }
+    }
+    return result;
+}
+
+void recursive(int cctvIndex, vector<int> heading){
+    if(cctvIndex == cctv.size() - 1){
+       int result = count_block(heading);
+       if(result < answer){
+           answer = result;
+       }
+       return;
+    }
+
+    if(work[cctv[cctvIndex+1].first][cctv[cctvIndex+1].second] == 5){
+        heading.push_back(0);
+        recursive(cctvIndex + 1, heading); // 5는 사방이라 방향이 없다
+        heading.pop_back();
+    }else{
+        for(int i = 0; i < 4; i++){
+            heading.push_back(i);
+            recursive(cctvIndex + 1, heading); // 깊이 있는 탐색 첫번째부터 0번 방향부터
+            heading.pop_back();
+        }
+    }
+}
+
+int main() {
+    cin >> n >> m;
+
+    for(int i = 0; i < n; i++){
+        for(int j = 0; j < m; j++){
+            cin >> work[i][j];
+            if(work[i][j] != 0 && work[i][j] != 6) {
+                cctv.push_back({i, j});
+            }else if(work[i][j] == 6){
+                wall.push_back({i, j});
+            }
+        }
+    }
+
+    if(cctv.size() > 0){
+        if(work[cctv[0].first][cctv[0].second] == 5){
+            vector<int> heading;
+            heading.push_back(0);
+            recursive(0, heading); // 5는 사방이라 방향이 없다
+        }else {
+            for (int i = 0; i < 4; i++) {
+                vector<int> heading;
+                heading.push_back(i);
+                recursive(0, heading); // 깊이 있는 탐색 첫번째부터 0번 방향부터
+            }
+        }
+    }else{
+        int result = n * m - wall.size();
+        if(result < answer){
+            answer = result;
+        }
+    }
+
+    cout << answer << "\n";
+
+    return 0;
+}
+```
