--- a/week4/16.md
+++ b/week4/16.md
@@ -1,9 +1,127 @@
 # Link to Question
 (브루트 포스) 치킨배달: https://www.acmicpc.net/problem/15686
 
+28m27s20
+
 ## Question Summary
 
 ## My solution summary
+이건 삽질안하고 한번에 끝나서 다행이다. 
+
+치킨집이 많아야 13개고, (13개 중에 1개, 13개 중에 2개 .... 13개 중에 13개를 구하는 모든 경우의 수) * (모든 집의 갯수 많아야 50 * 50) = 백만 천만 안될 느낌...
+
+그래서 그냥 브루트포스로 막 풀어도 되겠구나 싶어서 막 풀었다. 
+
+이문제 저문제 풀면서 삽질을 좀 했어서 그런지 코드가 좀 깨끗해진 느낌도 있다(문제가 좀쉽기도했다.)
+
+- getDist 함수: 거리를 구한다. abs 함수같은거 쓰면 좋을거같은데 c++을 맨날하는게 아니라 사용법 계속 까먹어서 그냥 구현해서 쓰는습관을 들이기로 했다. 
+
+- int getChickenDist(): 모든 치킨집과 집의 거리를 구한다. `vector<int> distArr(house.size(), 50 * 50 * 50 + 1);`얘를 통해서 각 집의 치킨거리를 모두 최댓값으로 초기화해두고 치킨거리가 작으면 업데이트 해준다. 치킨집은 무조건 m개를 살려뒀다.
+
+- void recursive(int index): index 번째 치킨집을 살릴지 말지 결정하는 함수이다. 살리는 치킨집은 survive 벡터에서 관리한다. 
+    ```c++
+    // 현재 index를 살리기로 결정
+    survived.push_back(index);
+    recursive(index + 1);
+
+    // 현재 index를 폐업시킨다
+    survived.pop_back();
+    recursive(index + 1);
+    ```
 
 ## My code
+```c++
+#include <iostream>
+#include <vector>
+#include <algorithm>
+#include <queue>
 
+using namespace std;
+
+int n, m;
+int town[50][50];
+
+vector<pair<int,int>> chicken;
+vector<pair<int, int>> house;
+vector<int> survived;
+int answer = 50 * 50 * 50 + 1;
+
+int getDist(pair<int,int> c, pair<int,int> h){
+    int rr = c.first - h.first > 0 ? c.first - h.first: h.first - c.first;
+    int cc = c.second - h.second > 0 ?  c.second - h.second:  h.second - c.second;
+    return rr + cc;
+}
+
+int getChickenDist(){
+    vector<int> distArr(house.size(), 50 * 50 * 50 + 1);
+
+    for(int i = 0; i < survived.size(); i++){
+        // 각 살아있는 가게마다 집이랑 거리를 구한다.
+        for(int j = 0; j < house.size(); j++){
+            // survived의 인덱스번째 chicken집이 살아 남았다
+            int d = getDist(chicken[survived[i]], house[j]);
+            if(d < distArr[j]){
+                distArr[j] = d; // 치킨집 거리를 업데이트
+            }
+        }
+    }
+
+    int sum = 0;
+    for(int i = 0; i < distArr.size(); i++){
+        sum += distArr[i];
+    }
+    return sum;
+}
+
+void recursive(int index){
+    if(survived.size() == m){
+//        cout << "다 골랐다 \n";
+//        for(int i = 0; i < survived.size(); i++){
+//            cout << survived[i] << "\n";
+//        }
+//        cout << "\n";
+        int chickenDist = getChickenDist();
+        if(answer > chickenDist){
+            answer = chickenDist;
+        }
+        return;
+    }
+
+    if(index == chicken.size()){
+        // 다 골랐다.
+        // 다 안고른거
+        return;
+    }
+
+    // 현재 index를 살리기로 결정
+    survived.push_back(index);
+    recursive(index + 1);
+
+    // 현재 index를 폐업시킨다
+    survived.pop_back();
+    recursive(index + 1);
+}
+
+int main() {
+    cin >> n >> m;
+
+    for(int i = 0; i < n; i++){
+        for(int j = 0;  j < n; j++){
+            cin >> town[i][j];
+
+            if(town[i][j] == 2){
+                // chicken
+                chicken.push_back({i, j});
+            }else if(town[i][j] == 1){
+                // house
+                house.push_back({i, j});
+            }
+        }
+    }
+
+    recursive(0);
+
+    cout << answer << "\n";
+    return 0;
+}
+```
