--- a/week5/17.md
+++ b/week5/17.md
@@ -1,9 +1,280 @@
 # Link to Question
 (브루트 포스) 테트리스: https://www.acmicpc.net/problem/3019
+2h02m56s33
 
 ## Question Summary
 
 ## My solution summary
+모든 경우를 그냥 다 때려박아서 만들면 되는것을, 머리쓴답시고 회전을 하는걸 만들어서 괜히 더 오류나서 난리가 났다. 
+
+3, 4와 6 7의 경우가 뒤집어서 만들어져가지고 계산이 안됬는데, 이를 수정해서 해결했다 
+
+각 모양을 만들고 모든 경우를 다 대보고, 도형의 해당 블럭 위치의 아래에 블럭이 있거나(2) 원래 놓여있던 블럭(1) 이면 해당 하는 경우로 카운팅해준다. 
+
+좌표를 잘못생각해서 모양이 다 뒤집어졌는데, 3,4와 6,7을 서로 반대로 뒤집어서 해결했다. (아래가-1 위가 1이다)
+
+- rotate: 각 좌표를 회전해준다. 
+- check: 다 놔보는 함수
+- 회전하는 방법
+```c++
+if(p == 1){
+    vector<pair<int, int>> s;
+    s.push_back({0,0});
+    s.push_back({0,1});
+    s.push_back({0,2});
+    s.push_back({0,3});
+    shape[p-1].push_back(s);
+
+    // 회전한 것 삽입
+    shape[p-1].push_back(rotate(s));
+}
+```
+
+이런식으로 회전해서 경우를 만들어 놓는다. 
+
 
 ## My code
+```c++
+#include <iostream>
+#include <vector>
+#include <algorithm>
+#include <queue>
 
+using namespace std;
+int c;
+int p;
+int mh; // 가장 높은 height;
+
+int arr[120][110]; // 지도
+
+vector<vector<pair<int, int>>> shape[7];
+vector<int> hlist;
+
+vector<pair<int, int>> rotate(vector<pair<int, int>>  p){
+    vector<pair<int, int>> newp;
+
+    for(int i = 0; i < p.size(); i++){
+        int cx = p[i].first;
+        int cy = p[i].second;
+
+        if(cx == 0 && cy == 0){
+            newp.push_back({0,0});
+        } else if(cx == 0 && cy == 1){
+            newp.push_back({1,0});
+        } else if(cx == 1 && cy == 1){
+            newp.push_back({1,-1});
+        } else if(cx == 1 && cy == 0){
+            newp.push_back({0,-1});
+        } else if(cx == 1 && cy == -1 ){
+            newp.push_back({-1,-1});
+        } else if(cx == 0 && cy == -1){
+            newp.push_back({-1,0});
+        } else if(cx == -1 && cy == -1){
+            newp.push_back({-1,1});
+        } else if(cx == -1 && cy == 0){
+            newp.push_back({0,1});
+        } else if(cx == -1 && cy == 1){
+            newp.push_back({1,1});
+        } else if(cx == 0 && cy == 2){
+            newp.push_back({2, 0});
+        }else if(cx == 0 && cy == 3){
+            newp.push_back({3, 0});
+        }
+    }
+
+    return newp;
+}
+
+void printArr(){
+    for(int j = 10; j >= 0 ;j--){
+        for(int i = 0; i < c; i++){
+            cout << arr[j][i] << " ";
+        }
+        cout << "\n";
+    }
+    cout << "\n";
+}
+
+int check(vector<pair<int, int>> p){
+    int result = 0;
+
+    // 다 놔보기
+    for(int i = 0; i < mh+3; i++){
+        for(int j = 0; j < c; j++){
+            pair<int, int> p1 = p[0];
+            pair<int, int> p2 = p[1];
+            pair<int, int> p3 = p[2];
+            pair<int, int> p4 = p[3];
+
+            p1.first += i;
+            p1.second += j;
+
+            p2.first += i;
+            p2.second += j;
+
+            p3.first += i;
+            p3.second += j;
+
+            p4.first += i;
+            p4.second += j;
+
+            if(p1.first < 0 || p2.first < 0 || p3.first < 0 || p4.first < 0){
+                continue;
+            }
+
+            if(p1.first > 110 || p2.first > 110 || p3.first > 110|| p4.first > 110){
+                continue;
+            }
+
+            if(p1.second < 0 || p2.second  < 0 || p3.second  < 0 || p4.second  < 0){
+                continue;
+            }
+
+            if(p1.second >= c || p2.second >= c || p3.second >= c || p4.second >= c){
+                continue;
+            }
+
+            if(arr[p1.first][p1.second] == 1 || arr[p2.first][p2.second] == 1 || arr[p3.first][p3.second] == 1 || arr[p4.first][p4.second] == 1){
+                continue;
+            }
+
+            arr[p1.first][p1.second] = 2;
+            arr[p2.first][p2.second] = 2;
+            arr[p3.first][p3.second] = 2;
+            arr[p4.first][p4.second] = 2;
+
+
+//            printArr();
+
+
+        // 0 층이면 바로
+        if((p1.first == 0 || arr[p1.first - 1][p1.second] == 1 || arr[p1.first - 1][p1.second] == 2) &&
+        (p2.first == 0 || arr[p2.first - 1][p2.second] == 1 || arr[p2.first - 1][p2.second] == 2) &&
+        (p3.first == 0 || arr[p3.first - 1][p3.second] == 1 || arr[p3.first - 1][p3.second] == 2) &&
+        (p4.first == 0 || arr[p4.first - 1][p4.second] == 1 || arr[p4.first - 1][p4.second] == 2) ){
+//            printArr();
+            result++;
+        }
+
+            arr[p1.first][p1.second] = 0;
+            arr[p2.first][p2.second] = 0;
+            arr[p3.first][p3.second] = 0;
+            arr[p4.first][p4.second] = 0;
+
+
+        }
+    }
+
+    return result;
+}
+
+
+
+int main() {
+    cin >> c >> p;
+
+    for(int i = 0; i < c; i++){
+        int h; cin >> h;
+        hlist.push_back(h);
+        if(mh < h){
+            mh = h;
+        }
+        for(int j = 0; j < h; j++){
+            arr[j][i] = 1; // 원래꺼는 1로 표시
+        }
+    }
+
+    if(p == 1){
+        vector<pair<int, int>> s;
+        s.push_back({0,0});
+        s.push_back({0,1});
+        s.push_back({0,2});
+        s.push_back({0,3});
+        shape[p-1].push_back(s);
+
+        // 회전한 것 삽입
+        shape[p-1].push_back(rotate(s));
+    }else if(p==2){
+        vector<pair<int, int>> s;
+        s.push_back({0,0});
+        s.push_back({0,1});
+        s.push_back({1,1});
+        s.push_back({1,0});
+        shape[p-1].push_back(s);
+    } else if(p == 4){
+        vector<pair<int, int>> s;
+        s.push_back({0,0});
+        s.push_back({0,1});
+        s.push_back({1,0});
+        s.push_back({1,-1});
+        shape[p-1].push_back(s);
+
+        // 회전한 것 삽입
+        shape[p-1].push_back(rotate(shape[p-1].back()));
+//        shape[p-1].push_back(rotate(shape[p-1].back()));
+//        shape[p-1].push_back(rotate(shape[p-1].back()));
+    } else if(p == 3){
+        vector<pair<int, int>> s;
+        s.push_back({0,0});
+        s.push_back({0,-1});
+        s.push_back({1,0});
+        s.push_back({1,1});
+        shape[p-1].push_back(s);
+
+        // 회전한 것 삽입
+        shape[p-1].push_back(rotate(shape[p-1].back()));
+//        shape[p-1].push_back(rotate(shape[p-1].back()));
+//        shape[p-1].push_back(rotate(shape[p-1].back()));
+    } else if(p == 5){
+        vector<pair<int, int>> s;
+        s.push_back({0,0});
+        s.push_back({1,-1});
+        s.push_back({1,0});
+        s.push_back({1,1});
+        shape[p-1].push_back(s);
+
+        // 회전한 것 삽입
+        shape[p-1].push_back(rotate(shape[p-1].back()));
+        shape[p-1].push_back(rotate(shape[p-1].back()));
+        shape[p-1].push_back(rotate(shape[p-1].back()));
+    } else if(p == 7){
+        vector<pair<int, int>> s;
+        s.push_back({0,1});
+        s.push_back({1,1});
+        s.push_back({1,0});
+        s.push_back({1,-1});
+        shape[p-1].push_back(s);
+
+        // 회전한 것 삽입
+        shape[p-1].push_back(rotate(shape[p-1].back()));
+        shape[p-1].push_back(rotate(shape[p-1].back()));
+        shape[p-1].push_back(rotate(shape[p-1].back()));
+    } else if(p == 6){
+        vector<pair<int, int>> s;
+        s.push_back({0,-1});
+        s.push_back({1,-1});
+        s.push_back({1,0});
+        s.push_back({1,1});
+        shape[p-1].push_back(s);
+
+        // 회전한 것 삽입
+        shape[p-1].push_back(rotate(shape[p-1].back()));
+        shape[p-1].push_back(rotate(shape[p-1].back()));
+        shape[p-1].push_back(rotate(shape[p-1].back()));
+    }
+
+//    printArr();
+
+
+    int answer = 0;
+    for(int i = 0; i < shape[p-1].size(); i++){
+        answer += check(shape[p-1][i]);
+    }
+
+
+//    printArr();
+
+    cout << answer << "\n";
+    return 0;
+}
+```
