18번 - 나중에 다시풀자. 정답률 50프로에서 벗어나기..

--- a/week5/18.md
+++ b/week5/18.md
@@ -1,9 +1,130 @@
 # Link to Question
 (브루트포스) 삼각형의 값: https://www.acmicpc.net/problem/4902
+2h52m31s8 하다가 도저히 안되서 여기서 멈춤. 50프로에서 틀린다. 
 
 ## Question Summary
 
 ## My solution summary
+이건 코드를 나중에 다시 보던가 해야겠다 
 
 ## My code
+1. 50프로에서 틀리는 코드
+```c++
+#include <iostream>
+#include <vector>
+#include <algorithm>
+#include <queue>
 
+using namespace std;
+
+int calcMax(vector<vector<int>> triangle, int line, vector<vector<int>> d){
+    int max = -1000 * 400 * 400 - 10;
+    for(int i = 0; i < line; i++){
+        for(int j = 0; j < triangle[i].size(); j += 2){
+            // 높이
+            int s = triangle[i][j]; // i,j에서 시작해서 그 하위 삼각형의 합 모두
+            if(s > max) {
+                max = s;
+            }
+
+            for(int k = i+1; k < line; k++){
+                // i번째 줄부터 line 번째 줄까지의 합
+                s += (d[k][j+k*2-2] - (j-1>= 0 ?  d[k][j-1] : 0));
+                if(max < s){
+                    max = s;
+                }
+            }
+
+        }
+    }
+
+    return max;
+}
+
+int calcMaxReverse(vector<vector<int>> triangle, int line, vector<vector<int>> d){
+    int max = -1000 * 400 * 400 - 10;
+//    cout << "reverse" << "\n";
+
+//    for(int i = 0; i < d.size(); i++){
+//        for(int j = 0; j < d[i].size(); j++){
+//            cout << d[i][j] << " ";
+//        }
+//        cout << "\n";
+//    }
+    for(int i = line - 1; i >= 0; i--){
+        for(int j = 1; j < triangle[i].size(); j += 2){
+            // 높이
+            int s = triangle[i][j]; // i,j에서 시작해서 그 하위 삼각형의 합 모두
+            if(s > max){
+                max = s;
+            }
+
+//            cout << "Start: " << i << " " << j  << "\n";
+            int len = 3;
+            for(int k = i-1; k >= 0; k--){
+                // 현재 체크해야할 길이
+                int start = j - len + 1;
+                int end = j;
+                // 이 범위의 값
+
+                if(start >= 0 && end < triangle[k].size()){
+                    // 이 범위의 합
+//                    cout << "sum: " << d[k][end] << " " << (start-1>= 0 ?  d[k][start-1] : 0) << "\n";
+//                    cout << "original s " << s << "\n";
+                    s += (d[k][end] - (start-1>= 0 ?  d[k][start-1] : 0));
+                }else{
+                    break;
+                }
+
+//                cout << s << "\n";
+                len +=2;
+            }
+
+
+        }
+    }
+
+    return max;
+}
+
+int main() {
+    int step = 1;
+    while(true){
+        int line = 0;
+        cin >> line;
+
+        if(line == 0){
+            break;
+        }
+
+        vector<vector<int>> triangle(line);
+        vector<vector<int>> d; // i번째줄의 0까지합, 1까지합 ...
+
+        for(int i = 1; i <= line; i++){
+            for(int j = 0; j < i * 2 - 1; j++){
+                int val;
+                cin >> val;
+                triangle[i-1].push_back(val);
+            }
+        }
+
+        // 해당 line의 첫번째 원소부터 해당번호까지의 합
+        for(int i = 1; i <= line; i++){
+            vector<int> cur(i*2-1, 0); // i * i;
+            cur[0] = triangle[i-1][0]; // i번째 line의 0개 합
+            for(int j = 1; j < i*2 - 1; j++){
+                // j부터 k개
+                cur[j] = cur[j-1] + triangle[i-1][j];
+            }
+            d.push_back(cur);
+        }
+
+        int answer = calcMax(triangle, line, d);
+
+        int ranswer = calcMaxReverse(triangle, line, d);
+
+        cout << step++ << ". " << (answer > ranswer ? answer: ranswer) << "\n";
+    }
+    return 0;
+}
+```
