--- a/week5/17.md
+++ b/week5/17.md
@@ -33,6 +33,8 @@ if(p == 1){
 이런식으로 회전해서 경우를 만들어 놓는다. 
 
 
+++ 추가: [좋은 방법은변화량을 활용하는 방법](https://jongnan.tistory.com/entry/BOJ-3019-%ED%85%8C%ED%8A%B8%EB%A6%AC%EC%8A%A4)
+
 ## My code
 ```c++
 #include <iostream>
